[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/images/iconstraits/hammer.png" type="Texture" id=1]
[ext_resource path="res://assets/images/gui/gui icons/icon_wits.png" type="Texture" id=2]
[ext_resource path="res://assets/images/gui/gui icons/icon_physics.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/gui icons/icon_charm.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/gui icons/icon_sex.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/gui icons/base_exp.png" type="Texture" id=6]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NonDecorButtons.tres" type="Theme" id=7]
[ext_resource path="res://assets/Themes_v2/INVENTORY/I_SlaveList.tres" type="Theme" id=8]
[ext_resource path="res://assets/Themes_v2/INVENTORY/I_SL_Buttons.tres" type="Theme" id=9]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=10]
[ext_resource path="res://gui_modules/Inventory/Scripts/InventoryFactorsModule.gd" type="Script" id=11]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Buttons/buttoncharlist_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Buttons/buttoncharlist.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Buttons/buttoncharlist_hover.png" type="Texture" id=14]
[ext_resource path="res://assets/Fonts_v2/FontThemes/TitlesMiddle.tres" type="DynamicFont" id=15]
[ext_resource path="res://assets/Fonts_v2/FontThemes/TitlesMiddle3.tres" type="DynamicFont" id=16]

[node name="InventorySlaveListModule" type="Panel"]
margin_right = 595.0
margin_bottom = 1050.0
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 34.0
margin_top = 111.0
margin_right = 551.0
margin_bottom = 623.0
theme = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
size_flags_horizontal = 3

[node name="Button" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_right = 517.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 7 )
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 14 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 16.0
margin_top = -1.0
margin_right = 500.0
margin_bottom = 39.0
custom_colors/font_color = Color( 1, 0.968627, 0.843137, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Name"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolIcon" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 452.0
margin_top = 1.0
margin_right = 492.0
margin_bottom = 41.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskIcon" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 412.0
margin_top = 1.0
margin_right = 452.0
margin_bottom = 41.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 595.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 15 )
text = "INVENTORYCHARACTERLIST"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryFactorsModule" type="Control" parent="."]
margin_left = 5.18546
margin_top = 640.257
margin_right = 600.185
margin_bottom = 840.257
script = ExtResource( 11 )

[node name="factors1" type="VBoxContainer" parent="InventoryFactorsModule"]
margin_left = 230.169
margin_top = 11.0
margin_right = 290.169
margin_bottom = 191.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charm_factor" type="Label" parent="InventoryFactorsModule/factors1"]
margin_right = 56.0
margin_bottom = 42.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 16 )
text = "CHA"

[node name="Label" type="Label" parent="InventoryFactorsModule/factors1/charm_factor"]
margin_left = 69.2385
margin_top = 3.0
margin_right = 165.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
text = "25"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sexuals_factor" type="Label" parent="InventoryFactorsModule/factors1"]
margin_top = 46.0
margin_right = 51.0
margin_bottom = 88.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 16 )
text = "SEX"

[node name="Label" type="Label" parent="InventoryFactorsModule/factors1/sexuals_factor"]
margin_left = 69.2385
margin_top = 3.0
margin_right = 165.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
text = "25"
clip_text = true

[node name="tame_factor" type="Label" parent="InventoryFactorsModule/factors1" groups=["hide_master"]]
margin_top = 92.0
margin_right = 57.0
margin_bottom = 134.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 16 )
text = "TAM"

[node name="Label" type="Label" parent="InventoryFactorsModule/factors1/tame_factor"]
margin_left = 69.2385
margin_top = 3.0
margin_right = 165.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
text = "25"
clip_text = true

[node name="timid_factor" type="Label" parent="InventoryFactorsModule/factors1" groups=["hide_master"]]
margin_top = 138.0
margin_right = 60.0
margin_bottom = 180.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 16 )
text = "TMD"

[node name="Label" type="Label" parent="InventoryFactorsModule/factors1/timid_factor"]
margin_left = 69.2385
margin_top = 3.0
margin_right = 165.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
text = "25"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="factors2" type="VBoxContainer" parent="InventoryFactorsModule"]
margin_left = 403.568
margin_top = 11.0
margin_right = 463.568
margin_bottom = 191.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="growth_factor" type="Label" parent="InventoryFactorsModule/factors2"]
margin_right = 59.0
margin_bottom = 42.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 16 )
text = "GRO"

[node name="Label" type="Label" parent="InventoryFactorsModule/factors2/growth_factor"]
margin_left = 69.2385
margin_top = 3.0
margin_right = 165.0
margin_bottom = 38.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Excellent"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="physics_factor" type="Label" parent="InventoryFactorsModule/factors2"]
margin_top = 46.0
margin_right = 54.0
margin_bottom = 88.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 16 )
text = "PHY"

[node name="Label" type="Label" parent="InventoryFactorsModule/factors2/physics_factor"]
margin_left = 69.2385
margin_top = 3.0
margin_right = 165.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
text = "25"
clip_text = true

[node name="magic_factor" type="Label" parent="InventoryFactorsModule/factors2"]
margin_top = 92.0
margin_right = 60.0
margin_bottom = 134.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 16 )
text = "MAG"

[node name="Label" type="Label" parent="InventoryFactorsModule/factors2/magic_factor"]
margin_left = 69.2385
margin_top = 3.0
margin_right = 165.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
text = "25"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wits_factor" type="Label" parent="InventoryFactorsModule/factors2"]
margin_top = 138.0
margin_right = 51.0
margin_bottom = 180.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 16 )
text = "WIT"

[node name="Label" type="Label" parent="InventoryFactorsModule/factors2/wits_factor"]
margin_left = 69.2385
margin_top = 3.0
margin_right = 165.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
text = "25"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="Control" parent="InventoryFactorsModule"]
margin_left = 4.0
margin_top = 11.0
margin_right = 209.0
margin_bottom = 194.0

[node name="TextureRect2" type="Control" parent="InventoryFactorsModule/VBoxContainer2"]
margin_right = 58.0
margin_bottom = 183.0
mouse_filter = 2

[node name="Exp" type="TextureRect" parent="InventoryFactorsModule/VBoxContainer2/TextureRect2"]
margin_left = 9.0
margin_top = 12.0
margin_right = 49.0
margin_bottom = 35.0
rect_min_size = Vector2( 40, 23 )
mouse_filter = 0
texture = ExtResource( 6 )

[node name="physics" type="TextureRect" parent="InventoryFactorsModule/VBoxContainer2/TextureRect2"]
margin_left = 9.0
margin_top = 58.0
margin_right = 37.0
margin_bottom = 83.0
mouse_filter = 0
texture = ExtResource( 3 )

[node name="wits" type="TextureRect" parent="InventoryFactorsModule/VBoxContainer2/TextureRect2"]
margin_left = 9.0
margin_top = 89.0
margin_right = 37.0
margin_bottom = 114.0
mouse_filter = 0
texture = ExtResource( 2 )

[node name="charm" type="TextureRect" parent="InventoryFactorsModule/VBoxContainer2/TextureRect2"]
margin_left = 9.0
margin_top = 118.703
margin_right = 37.0
margin_bottom = 143.703
mouse_filter = 0
texture = ExtResource( 4 )

[node name="sexuals" type="TextureRect" parent="InventoryFactorsModule/VBoxContainer2/TextureRect2"]
margin_left = 9.0
margin_top = 150.619
margin_right = 37.0
margin_bottom = 175.619
mouse_filter = 0
texture = ExtResource( 5 )

[node name="TextureRect3" type="Control" parent="InventoryFactorsModule/VBoxContainer2"]
margin_left = 65.0
margin_right = 115.0
margin_bottom = 183.0
rect_min_size = Vector2( 50, 0 )
mouse_filter = 2

[node name="BaseExp" type="Label" parent="InventoryFactorsModule/VBoxContainer2/TextureRect3"]
margin_top = 1.0
margin_right = 50.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="physics" type="Label" parent="InventoryFactorsModule/VBoxContainer2/TextureRect3"]
margin_left = -27.0
margin_top = 46.0
margin_right = 76.0
margin_bottom = 81.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Physics"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wits" type="Label" parent="InventoryFactorsModule/VBoxContainer2/TextureRect3"]
margin_left = -27.0
margin_top = 80.0
margin_right = 76.0
margin_bottom = 115.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Wits"
align = 1
clip_text = true

[node name="charm" type="Label" parent="InventoryFactorsModule/VBoxContainer2/TextureRect3"]
margin_left = -27.0
margin_top = 114.0
margin_right = 76.0
margin_bottom = 149.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Charm"
align = 1
clip_text = true

[node name="sexuals" type="Label" parent="InventoryFactorsModule/VBoxContainer2/TextureRect3"]
margin_left = -27.0
margin_top = 148.0
margin_right = 76.0
margin_bottom = 183.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Sexuals"
align = 1
clip_text = true

[node name="TextureRect4" type="Control" parent="InventoryFactorsModule/VBoxContainer2"]
margin_left = 140.0
margin_right = 205.0
margin_bottom = 183.0
rect_min_size = Vector2( 50, 0 )

[node name="NextClassExp" type="Label" parent="InventoryFactorsModule/VBoxContainer2/TextureRect4"]
margin_top = 1.0
margin_right = 50.0
margin_bottom = 36.0
mouse_filter = 0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="physics2" type="Label" parent="InventoryFactorsModule/VBoxContainer2/TextureRect4"]
margin_left = 1.0
margin_top = 46.0
margin_right = 51.0
margin_bottom = 81.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Physics"
align = 1
clip_text = true

[node name="wits2" type="Label" parent="InventoryFactorsModule/VBoxContainer2/TextureRect4"]
margin_left = 1.0
margin_top = 80.0
margin_right = 51.0
margin_bottom = 115.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Wits"
align = 1
clip_text = true

[node name="charm2" type="Label" parent="InventoryFactorsModule/VBoxContainer2/TextureRect4"]
margin_left = 1.0
margin_top = 114.0
margin_right = 51.0
margin_bottom = 149.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Charm"
align = 1
clip_text = true

[node name="sexuals2" type="Label" parent="InventoryFactorsModule/VBoxContainer2/TextureRect4"]
margin_left = 1.0
margin_top = 148.0
margin_right = 51.0
margin_bottom = 183.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Sexuals"
align = 1
clip_text = true
